--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Weather Forecaster</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -16,52 +17,42 @@
         crossorigin="anonymous"></script>
     <div>
         <div>
-            <!-- <h2>Search</h2> -->
             <input class="city-input" placeholder="Start typing a city...">
             <button id="search-button">Search</button>
-            <!-- <datalist id="datalistOptions">
-                <option value="San Francisco">
-                <option value="New York">
-                <option value="Seattle">
-                <option value="Los Angeles">
-                <option value="Chicago">
-            </datalist> -->
         </div>
-        <div class="container text-center">
+        <div class="container text-center current-weather">
             <div>
-                <h2>Current City</h2>
-                <h2 class="city-name"></h2>
-                <h3 class="temperature"></h3>
-                <h3 class="humidity"></h3>
-                <h3 class="wind-speed"></h3>
+                <h2 class="city-name">Current City</h2>
+                <h3 class="temperature">Temperature
+                    <span id="temperature-current"></span>
+                </h3>
+                <h3 class="humidity">Humidity
+                    <span id="humidity-current"></span>
+                </h3>
+                <h3 class="wind">Wind Speed
+                    <span id="wind-current"></span>
+                </h3>
             </div>
 
             <div>
+                <h2>Five Day Forecast</h2>
                 <div class="row align-items-start">
-                    <div class="col">
-                        Sunday
+                    <div class="col forecast" id="day-one">
+                        Tomorrow
                     </div>
-                    <div class="col">
-                        Monday
+                    <div class="col forecast" id="day-two">
+                        2 Day
                     </div>
-                    <div class="col">
-                        Tuesday
+                    <div class="ccol forecastol" id="day-three">
+                        3 Day
                     </div>
-                    <div class="col">
-                        Wednesday
+                    <div class="col forecast" id="day-four">
+                        4 Day
                     </div>
-                    <div class="col">
-                        Thursday
+                    <div class="col forecast" id="day-five">
+                        5 Day
                     </div>
-                    <div class="col">
-                        Friday
-                    </div>
-                    <div class="col">
-                        Saturday
-                    </div>
-                    <div class="col">
-                        Sunday
-                    </div>
+
                 </div>
             </div>
         </div>
