working on local storage

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         crossorigin="anonymous"></script>
     <div>
         <div>
-            <input class="city-input" placeholder="Start typing a city...">
+            <input class="city-input" id="search" placeholder="Start typing a city..." value=""
+                onchange="searchHistory() , openPage()">
             <button id="search-button">Search</button>
+            <div id="search-history">Search History</div>
         </div>
         <div class="container text-center current-weather">
             <div>
