--- a/index.html
+++ b/index.html
@@ -17,13 +17,16 @@
         crossorigin="anonymous"></script>
     <div>
         <div>
-            <input class="city-input" id="search" placeholder="Start typing a city..." value=""
-                onchange="searchHistory() , openPage()">
-            <button id="search-button">Search</button>
-            <div id="search-history">Search History</div>
+            <!-- USING ASIDE TO GET SEARCH HISTORY TO THE LEFT SIDE -->
+            <aside>
+                <input class=" city-input" id="search" placeholder="Start typing a city..." value=""
+                    onchange="searchHistory() , openPage()">
+                <button id="search-button">Search</button>
+                <div id="search-history">Search History</div>
+            </aside>
         </div>
-        <div class="container text-center current-weather">
-            <div>
+        <div class="container text-center">
+            <div class="current-weather">
                 <h2 class="city-name">Current City</h2>
                 <h3 class="temperature">Temperature
                     <span id="temperature-current"></span>
@@ -37,21 +40,21 @@
             </div>
 
             <div>
-                <h2>Five Day Forecast</h2>
+                <h2 class="forecast">Five Day Forecast</h2>
                 <div class="row align-items-start">
-                    <div class="col forecast" id="day-one">
+                    <div class="col day" id="one-day">
                         Tomorrow
                     </div>
-                    <div class="col forecast" id="day-two">
+                    <div class="col day" id="two-day">
                         2 Day
                     </div>
-                    <div class="ccol forecastol" id="day-three">
+                    <div class="col day" id="three-day">
                         3 Day
                     </div>
-                    <div class="col forecast" id="day-four">
+                    <div class="col day" id="four-day">
                         4 Day
                     </div>
-                    <div class="col forecast" id="day-five">
+                    <div class="col day" id="five-day">
                         5 Day
                     </div>
 
