Working on fixing local storage

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <div>
             <!-- USING ASIDE TO GET SEARCH HISTORY TO THE LEFT SIDE -->
             <aside>
-                <input class=" city-input" id="search" placeholder="Start typing a city..." value=""
-                    onchange="searchHistory() , openPage()">
+                <input class="city-input" id="search" placeholder="Start typing a city..." value=""
+                    onchange="searchHistory()">
+                <!--  , openPage() -->
                 <button id="search-button">Search</button>
                 <div id="search-history">Search History</div>
             </aside>
