--- a/index.html
+++ b/index.html
@@ -23,26 +23,34 @@
                     onchange="searchHistory()">
                 <!--  , openPage() -->
                 <button id="search-button">Search</button>
-                <div id="search-history">Search History</div>
+                <div class="hide" id="search-history">Search History</div>
+                <ul id="search-history-container"></ul>
             </aside>
         </div>
-        <div class="container text-center">
+        <div class="weather-container text-center">
             <div class="current-weather">
-                <h2 class="city-name">Current City</h2>
-                <h3 class="temperature">Temperature
+                <h2 id="city-name"></h2>
+                <h3 class="date">Date:
+                    <span id="date-current"></span>
+                </h3>
+                <h3 class="icon">
+                    <span id="icon-current"></span>
+                </h3>
+                <h3 class="temperature">Temperature:
                     <span id="temperature-current"></span>
                 </h3>
-                <h3 class="humidity">Humidity
+                <h3 class="humidity">Humidity:
                     <span id="humidity-current"></span>
                 </h3>
-                <h3 class="wind">Wind Speed
+                <h3 class="wind">Wind Speed:
                     <span id="wind-current"></span>
                 </h3>
             </div>
 
-            <div>
+            <div class="forecast-container text-center">
                 <h2 class="forecast">Five Day Forecast</h2>
                 <div class="row align-items-start">
+                    <h2>5 Day</h2>
                     <div class="col day" id="one-day">
                         Tomorrow
                     </div>
