--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- USING ASIDE TO GET SEARCH HISTORY TO THE LEFT SIDE -->
             <aside>
                 <input class="city-input" id="search" placeholder="Start typing a city..." value=""
-                    onchange="searchHistory()">
+                    onchange="saveSearch()">
                 <!--  , openPage() -->
                 <button id="search-button">Search</button>
                 <div class="hide" id="search-history">Search History</div>
