fixed errors with buttons

--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <div>
             <!-- USING ASIDE TO GET SEARCH HISTORY TO THE LEFT SIDE -->
             <aside>
-                <input class="city-input" id="search" placeholder="Start typing a city..." value=""
-                    onchange="saveSearch()">
-                <!--  , openPage() -->
+                <input class="city-input" id="search" placeholder="Start typing a city...">
+                <!--  onchange="saveSearch()", openPage() -->
                 <button id="search-button">Search</button>
                 <div class="hide" id="search-history">Search History</div>
                 <ul id="search-history-container"></ul>
