got blank image to display

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
                 <ul id="search-history-container"></ul>
             </aside>
         </div>
-        <div class="weather-container text-center">
+        <div class="current-weather-container text-center">
             <div class="current-weather">
                 <h2 id="city-name"></h2>
                 <h3 class="date">Date:
                     <span id="date-current"></span>
                 </h3>
-                <h3 class="icon">
+                <h3 class="current-weather-icon">
                     <span id="icon-current"></span>
                 </h3>
                 <h3 class="temperature">Temperature:
