Working on forecastWeather function - added inner html and defined cards

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
                 <h2 class="forecast">Five Day Forecast</h2>
                 <div class="row align-items-start">
 
-                    <div class="col day" id="day-one">
-                        <h3 class="date-forecast">Date:
+                    <div class="col day day-one" id="day-one">
+                        <h3>Tomorrow</h3>
+                        <!-- <h3 class="date-forecast">Date:
                             <span id="date-day-one"></span>
-                        </h3>
+                        </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-one"></span>
                         </h3>
@@ -65,10 +66,11 @@
                         </h3>
                     </div>
 
-                    <div class="col day" id="day-two">
-                        <h3 class="date-forecast">Date:
+                    <div class="col day day-two" id="day-two">
+                        <h3>Day 2</h3>
+                        <!-- <h3 class="date-forecast">Date:
                             <span id="date-day-two"></span>
-                        </h3>
+                        </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-two"></span>
                         </h3>
@@ -83,10 +85,11 @@
                         </h3>
                     </div>
 
-                    <div class="col day" id="day-three">
-                        <h3 class="date-forecast">Date:
+                    <div class="col day day-three" id="day-three">
+                        <h3>Day 3</h3>
+                        <!-- <h3 class="date-forecast">Date:
                             <span id="date-day-three"></span>
-                        </h3>
+                        </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-three"></span>
                         </h3>
@@ -101,10 +104,11 @@
                         </h3>
                     </div>
 
-                    <div class="col day" id="day-four">
-                        <h3 class="date-forecast">Date:
+                    <div class="col day day-four" id="day-four">
+                        <h3>Day 4</h3>
+                        <!-- <h3 class="date-forecast">Date:
                             <span id="date-day-four"></span>
-                        </h3>
+                        </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-four"></span>
                         </h3>
@@ -119,10 +123,11 @@
                         </h3>
                     </div>
 
-                    <div class="col day" id="day-five">
-                        <h3 class="date-forecast">Date:
+                    <div class="col day day-five" id="day-five">
+                        <h3>Day 5</h3>
+                        <!-- <h3 class="date-forecast">Date:
                             <span id="date-day-five"></span>
-                        </h3>
+                        </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-five"></span>
                         </h3>
