Working on forecastWeather function using template literals

--- a/index.html
+++ b/index.html
@@ -50,95 +50,95 @@
                     <div class="col day day-one" id="day-one">
                         <h3>Tomorrow</h3>
                         <!-- <h3 class="date-forecast">Date:
-                            <span id="date-day-one"></span>
+                            <span id="date-day-5"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-one"></span>
+                            <span id="icon-day-5"></span>
                         </h3>
                         <h3 class="temperature-forecast">Temperature:
-                            <span id="temperature-day-one"></span>
+                            <span id="temperature-day-5"></span>
                         </h3>
                         <h3 class="humidity-forecast">Humidity:
-                            <span id="humidity-day-one"></span>
+                            <span id="humidity-day-5"></span>
                         </h3>
                         <h3 class="wind-forecast">Wind Speed:
-                            <span id="wind-day-one"></span>
+                            <span id="wind-day-5"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-two" id="day-two">
                         <h3>Day 2</h3>
                         <!-- <h3 class="date-forecast">Date:
-                            <span id="date-day-two"></span>
+                            <span id="date-day-13"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-two"></span>
+                            <span id="icon-day-13"></span>
                         </h3>
                         <h3 class="temperature-forecast">Temperature:
-                            <span id="temperature-day-two"></span>
+                            <span id="temperature-day-13"></span>
                         </h3>
                         <h3 class="humidity-forecast">Humidity:
-                            <span id="humidity-day-two"></span>
+                            <span id="humidity-day-13"></span>
                         </h3>
                         <h3 class="wind-forecast">Wind Speed:
-                            <span id="wind-day-two"></span>
+                            <span id="wind-day-13"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-three" id="day-three">
                         <h3>Day 3</h3>
                         <!-- <h3 class="date-forecast">Date:
-                            <span id="date-day-three"></span>
+                            <span id="date-day-21"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-three"></span>
+                            <span id="icon-day-21"></span>
                         </h3>
                         <h3 class="temperature-forecast">Temperature:
-                            <span id="temperature-day-three"></span>
+                            <span id="temperature-day-21"></span>
                         </h3>
                         <h3 class="humidity-forecast">Humidity:
-                            <span id="humidity-day-three"></span>
+                            <span id="humidity-day-21"></span>
                         </h3>
                         <h3 class="wind-forecast">Wind Speed:
-                            <span id="wind-day-three"></span>
+                            <span id="wind-day-21"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-four" id="day-four">
                         <h3>Day 4</h3>
                         <!-- <h3 class="date-forecast">Date:
-                            <span id="date-day-four"></span>
+                            <span id="date-day-29"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-four"></span>
+                            <span id="icon-day-29"></span>
                         </h3>
                         <h3 class="temperature-forecast">Temperature:
-                            <span id="temperature-day-four"></span>
+                            <span id="temperature-day-29"></span>
                         </h3>
                         <h3 class="humidity-forecast">Humidity:
-                            <span id="humidity-day-four"></span>
+                            <span id="humidity-day-29"></span>
                         </h3>
                         <h3 class="wind-forecast">Wind Speed:
-                            <span id="wind-day-four"></span>
+                            <span id="wind-day-29"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-five" id="day-five">
                         <h3>Day 5</h3>
                         <!-- <h3 class="date-forecast">Date:
-                            <span id="date-day-five"></span>
+                            <span id="date-day-37"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-five"></span>
+                            <span id="icon-day-37"></span>
                         </h3>
                         <h3 class="temperature-forecast">Temperature:
-                            <span id="temperature-day-five"></span>
+                            <span id="temperature-day-37"></span>
                         </h3>
                         <h3 class="humidity-forecast">Humidity:
-                            <span id="humidity-day-five"></span>
+                            <span id="humidity-day-37"></span>
                         </h3>
                         <h3 class="wind-forecast">Wind Speed:
-                            <span id="wind-day-five"></span>
+                            <span id="wind-day-37"></span>
                         </h3>
                     </div>
 
