added forecast weather data to forecastWeather function

--- a/index.html
+++ b/index.html
@@ -49,76 +49,76 @@
 
                     <div class="col day day-one" id="day-one">
                         <h3>Tomorrow</h3>
-                        <!-- <h3 class="date-forecast">Date:
+                        <!-- <h3 class="date-forecast">
                             <span id="date-day-5"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-5"></span>
                         </h3>
-                        <h3 class="temperature-forecast">Temperature:
+                        <h3 class="temperature-forecast">
                             <span id="temperature-day-5"></span>
                         </h3>
-                        <h3 class="humidity-forecast">Humidity:
+                        <h3 class="humidity-forecast">
                             <span id="humidity-day-5"></span>
                         </h3>
-                        <h3 class="wind-forecast">Wind Speed:
+                        <h3 class="wind-forecast">
                             <span id="wind-day-5"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-two" id="day-two">
                         <h3>Day 2</h3>
-                        <!-- <h3 class="date-forecast">Date:
+                        <!-- <h3 class="date-forecast">
                             <span id="date-day-13"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-13"></span>
                         </h3>
-                        <h3 class="temperature-forecast">Temperature:
+                        <h3 class="temperature-forecast">
                             <span id="temperature-day-13"></span>
                         </h3>
-                        <h3 class="humidity-forecast">Humidity:
+                        <h3 class="humidity-forecast">
                             <span id="humidity-day-13"></span>
                         </h3>
-                        <h3 class="wind-forecast">Wind Speed:
+                        <h3 class="wind-forecast">
                             <span id="wind-day-13"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-three" id="day-three">
                         <h3>Day 3</h3>
-                        <!-- <h3 class="date-forecast">Date:
+                        <!-- <h3 class="date-forecast">
                             <span id="date-day-21"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-21"></span>
                         </h3>
-                        <h3 class="temperature-forecast">Temperature:
+                        <h3 class="temperature-forecast">
                             <span id="temperature-day-21"></span>
                         </h3>
-                        <h3 class="humidity-forecast">Humidity:
+                        <h3 class="humidity-forecast">
                             <span id="humidity-day-21"></span>
                         </h3>
-                        <h3 class="wind-forecast">Wind Speed:
+                        <h3 class="wind-forecast">
                             <span id="wind-day-21"></span>
                         </h3>
                     </div>
 
                     <div class="col day day-four" id="day-four">
                         <h3>Day 4</h3>
-                        <!-- <h3 class="date-forecast">Date:
+                        <!-- <h3 class="date-forecast">
                             <span id="date-day-29"></span>
                         </h3> -->
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-29"></span>
                         </h3>
-                        <h3 class="temperature-forecast">Temperature:
+                        <h3 class="temperature-forecast">
                             <span id="temperature-day-29"></span>
                         </h3>
-                        <h3 class="humidity-forecast">Humidity:
+                        <h3 class="humidity-forecast">
                             <span id="humidity-day-29"></span>
                         </h3>
-                        <h3 class="wind-forecast">Wind Speed:
+                        <h3 class="wind-forecast">
                             <span id="wind-day-29"></span>
                         </h3>
                     </div>
@@ -131,13 +131,13 @@
                         <h3 class="weather-icon-forecast">
                             <span id="icon-day-37"></span>
                         </h3>
-                        <h3 class="temperature-forecast">Temperature:
+                        <h3 class="temperature-forecast">
                             <span id="temperature-day-37"></span>
                         </h3>
-                        <h3 class="humidity-forecast">Humidity:
+                        <h3 class="humidity-forecast">
                             <span id="humidity-day-37"></span>
                         </h3>
-                        <h3 class="wind-forecast">Wind Speed:
+                        <h3 class="wind-forecast">
                             <span id="wind-day-37"></span>
                         </h3>
                     </div>
