Added date and cleaned up comments and improved CSS styling

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="current-weather-container text-center">
             <div class="current-weather">
                 <h2 id="city-name"></h2>
-                <h3 class="date">Date:
-                    <span id="date-current"></span>
+                <h3 class="date">
+                    <p id="date-current"></p>
                 </h3>
                 <h3 class="current-weather-icon">
                     <img id="icon-current">
@@ -49,11 +49,11 @@
 
                     <div class="col day day-one" id="day-one">
                         <h3>Tomorrow</h3>
-                        <!-- <h3 class="date-forecast">
+                        <h3 class="date-forecast">
                             <span id="date-day-5"></span>
-                        </h3> -->
+                        </h3>
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-5"></span>
+                            <img id="icon-day-5">
                         </h3>
                         <h3 class="temperature-forecast">
                             <span id="temperature-day-5"></span>
@@ -68,11 +68,11 @@
 
                     <div class="col day day-two" id="day-two">
                         <h3>Day 2</h3>
-                        <!-- <h3 class="date-forecast">
+                        <h3 class="date-forecast">
                             <span id="date-day-13"></span>
-                        </h3> -->
+                        </h3>
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-13"></span>
+                            <img id="icon-day-13">
                         </h3>
                         <h3 class="temperature-forecast">
                             <span id="temperature-day-13"></span>
@@ -87,11 +87,11 @@
 
                     <div class="col day day-three" id="day-three">
                         <h3>Day 3</h3>
-                        <!-- <h3 class="date-forecast">
+                        <h3 class="date-forecast">
                             <span id="date-day-21"></span>
-                        </h3> -->
+                        </h3>
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-21"></span>
+                            <img id="icon-day-21">
                         </h3>
                         <h3 class="temperature-forecast">
                             <span id="temperature-day-21"></span>
@@ -106,11 +106,11 @@
 
                     <div class="col day day-four" id="day-four">
                         <h3>Day 4</h3>
-                        <!-- <h3 class="date-forecast">
+                        <h3 class="date-forecast">
                             <span id="date-day-29"></span>
-                        </h3> -->
+                        </h3>
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-29"></span>
+                            <img id="icon-day-29">
                         </h3>
                         <h3 class="temperature-forecast">
                             <span id="temperature-day-29"></span>
@@ -125,11 +125,11 @@
 
                     <div class="col day day-five" id="day-five">
                         <h3>Day 5</h3>
-                        <!-- <h3 class="date-forecast">Date:
+                        <h3 class="date-forecast">Date:
                             <span id="date-day-37"></span>
-                        </h3> -->
+                        </h3>
                         <h3 class="weather-icon-forecast">
-                            <span id="icon-day-37"></span>
+                            <img id="icon-day-37">
                         </h3>
                         <h3 class="temperature-forecast">
                             <span id="temperature-day-37"></span>
@@ -148,6 +148,13 @@
     </div>
 </body>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js">
+    crossorigin = "anonymous"
+</script>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
 <script src="./script.js"></script>
 
 </html>
