--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
                     <div class="col day day-five" id="day-five">
                         <h3>Day 5</h3>
-                        <h3 class="date-forecast">Date:
+                        <h3 class="date-forecast">
                             <span id="date-day-37"></span>
                         </h3>
                         <h3 class="weather-icon-forecast">
